--- a/app/views/farmer_instruments/index.html.erb
+++ b/app/views/farmer_instruments/index.html.erb
@@ -8,11 +8,20 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet"> 
+	<style type="text/css">
+		table#tbl{
+  border: 1px solid black;
+  margin-top: 50px;
+  
+}
 
+	</style>
 </head>
 <body>
 	<div class="container-fluid">
+		<br>
 		
+	    <h2 class="btn btn-success" style="float: right;color: black"><%= link_to 'Create New Advertisement', new_farmer_instrument_path %></h2>
 		<h1 style="margin-top:50px; font-family: 'IM Fell Great Primer SC', serif;" align="center" >Instrument Posts</h1>
 		<center>
 			<table class="table" style="width:1500px" id="tbl">
