--- a/app/views/farmer_instruments/index.html.erb
+++ b/app/views/farmer_instruments/index.html.erb
@@ -10,10 +10,10 @@
 	<link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet"> 
 	<style type="text/css">
 		table#tbl{
-  border: 1px solid black;
-  margin-top: 50px;
-  
-}
+			border: 1px solid black;
+			margin-top: 50px;
+
+		}
 
 	</style>
 </head>
@@ -21,7 +21,7 @@
 	<div class="container-fluid">
 		<br>
 		
-	    <h2 class="btn btn-success" style="float: right;color: black"><%= link_to 'Create New Advertisement', new_farmer_instrument_path %></h2>
+		<h2 class="btn btn-success" style="float: right;color: black"><%= link_to 'Create New Advertisement', new_farmer_instrument_path %></h2>
 		<h1 style="margin-top:50px; font-family: 'IM Fell Great Primer SC', serif;" align="center" >Instrument Posts</h1>
 		<center>
 			<table class="table" style="width:1500px" id="tbl">
@@ -33,6 +33,8 @@
 						<th>Instrument Name</th>
 						<th>Availability Status</th>
 						<th>View Details</th>
+						<th>Edit Details</th>
+						<th>Delete Record</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -42,6 +44,9 @@
 						<td><%= ad.instrument.name %></td>
 						<td><%= ad.is_available %></td>
 						<td><%= link_to 'View Details', farmer_instrument_path(ad.id)%></td>
+						<td><%= link_to 'Edit Details', edit_farmer_instrument_path(ad.id)%></td>
+						<td><%= link_to 'Delete Record', farmer_instrument_path(ad.id),
+						data: {:confirm => 'Are you sure to delete Record ?'}, :method => :delete %></td>
 					</tr>
 					<% end %>
 				</tbody>
